@@ -64,6 +64,7 @@ https://github.com/elastic/beats/compare/v6.2.3...master[Check the HEAD diff]
 - Preserve the event when source matching fails in `add_docker_metadata`. {pull}7133[7133]
 - Negotiate Docker API version from our client instead of using a hardcoded one. {pull}7165[7165]
 - Fix delays on autodiscovery events handling caused by blocking runner stops. {pull}7170[7170]
+- Error out on invalid Autodiscover template conditions settings. {pull}7200[7200]
 
 *Auditbeat*
 
